# Redact

./: main.py  pyproject.toml
Project Guide/: 01_project_overview.md  02_conventions.md  03_todo.md  04_log.md  05_known_issues.md
backend/: celery_app.py  db.sqlite3  manage.py  pytest.ini  requirements-dev.txt  requirements.txt  tasks.py
backend/app/: admin.py  apps.py  models.py  urls.py  urls_temp.py  views.py  views_simple.py
backend/app/middleware/: api_middleware.py  timeout_middleware.py
backend/app/migrations/: 0001_initial.py
backend/app/services/: bounding_box_calculator.py  fuzzy_matcher.py  image_extraction_service.py  match_scoring_service.py  metadata_extraction_service.py  ocr_service.py  pdf_merger.py  pdf_processor.py  pdf_splitter.py  redaction_service.py  regex_pattern_service.py  table_extraction_service.py  temp_file_manager.py  text_extraction_service.py  unified_search_service.py
backend/app/templates/: base.html
backend/app/tests/: conftest.py  test_api_endpoints.py  test_api_endpoints_comprehensive.py  test_api_middleware.py  test_bounding_box_calculator.py  test_extraction_integration.py  test_models.py  (+14 more)
backend/ultimate_pdf/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.local.example  .eslintrc.json  .gitignore  .prettierrc  README.md  jest.config.js  jest.polyfills.js  jest.polyfills.ts  jest.setup.js  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: run_backend_tests.sh  run_frontend_tests.sh  run_tests.py
test_documents/: README.md  generate_test_pdfs.py
(+54 files in other folders)
