[project]
name = "redact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.5",
    "PyPDF2==3.0.1",
    "fuzzywuzzy==0.18.0",
    "rapidfuzz>=3.0.0",
    "pytesseract==0.3.10",
    "opencv-python==4.8.1.78",
    "celery==5.3.4",
    "redis==5.0.1",
    "structlog==23.2.0",
    "Pillow==10.1.0",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "psutil==5.9.6",
    "numpy>=1.24,<2"
]
